# if-instance

./: .gitignore  changelog.md  if-instance.cabal  readme.md
.github/workflows/: ci.yml
example/: M1.hs  M2.hs
src/Data/Constraint/: If.hs
src/IfCt/: Plugin.hs
src/IfSat/: Plugin.hs
src/IfSat/Plugin/: Compat.hs
test/: Framework.hs  Main.hs  Tests.hs
